# tip-tune

./: CONTRIBUTING.md  PR_DESCRIPTION.md  README.md
.github/workflows/: contracts.yml
backend/: TESTING.md  data-source.ts  package-lock.json  package.json  tsconfig.build.json  waveform-architecture.md
backend/migrations/: 1770000001000-CreatePayoutReconciliationTables.ts
contracts/: .gitignore  Cargo.toml
contracts/arithmetic-utils/: Cargo.toml
contracts/arithmetic-utils/src/: lib.rs
contracts/artist-allowlist/src/: lib.rs  test.rs
contracts/auto-royalty-distribution/src/: lib.rs  test.rs
contracts/drip-tip-matching/src/: errors.rs  events.rs  lib.rs  types.rs
contracts/drip-tip-matching/tests/: matching_pool_tests.rs
contracts/lottery/: Cargo.toml
contracts/lottery/src/: lib.rs
contracts/lottery/tests/: lottery_tests.rs
contracts/reward-token/src/: lib.rs  test.rs
contracts/royalty-split/src/: lib.rs
contracts/tip-escrow/src/: lib.rs  types.rs
contracts/tip-goal-campaign/src/: lib.rs
contracts/tip-nft-badge/src/: lib.rs
contracts/tip-subscription/src/: events.rs  lib.rs  storage.rs  test.rs  types.rs
contracts/tip-time-lock/src/: lib.rs  storage.rs  test.rs
contracts/tip_vault/: Cargo.toml
contracts/tip_vault/src/: error.rs  lib.rs
contracts/tip_vault/tests/: tip_vault_tests.rs
contracts/track_access_control/: Cargo.toml
contracts/track_access_control/src/: error.rs  lib.rs
contracts/track_access_control/tests/: track_access_tests.rs
frontend/: WALLET_UX_GUIDE.md  package-lock.json  vite.config.ts
(+125 files in other folders)
